Fixes even more compatibility issues