@@ -386,7 +386,7 @@ public class LegendFigure extends Figure implements GUIDefaults {
 		if (!featureColors.isEmpty()) {
 			for (final FeatureColor currentColor : featureColors) {
 				createColoredRowFeatureAbstract(row++, currentColor, colorIndex);
-				if (currentColor.getMeaning().isBlank()) {
+				if (currentColor.getMeaning().trim().isEmpty()) {
 					colorIndex++;
 				}
 			}
@@ -532,7 +532,7 @@ public class LegendFigure extends Figure implements GUIDefaults {
 			rect.setSize(x2 - x1, y2 - y1);
 			rect.setLocation(p1);
 			add(rect);
-			final String meaning = color.getMeaning().isBlank() ? "Custom Color " + String.format("%02d", colorIndex) : color.getMeaning();
+			final String meaning = color.getMeaning().trim().isEmpty() ? "Custom Color " + String.format("%02d", colorIndex) : color.getMeaning();
 			final Label labelFeature = createLabel(row, meaning, CUSTOM_COLOR_TOOLTIP);
 			add(labelFeature);
 		}
